<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.App.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/radius_lg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_20"
        android:paddingTop="@dimen/space_24"
        android:paddingBottom="@dimen/space_16">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/space_8"
            android:text="@string/subscribe"
            android:textColor="@color/black_white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:gravity="center"
            android:paddingHorizontal="@dimen/space_8"
            android:text="@string/subscribe_desc"
            android:textColor="@color/gray_full"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_8"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/radius_lg"
                app:cardElevation="0dp">

                <TextView
                    style="@style/Widget.App.Button.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="15sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/radius_lg"
                app:cardElevation="0dp">

                <TextView
                    style="@style/Widget.App.Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase"
                    android:textSize="15sp" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
